force-app/main/default/objects/DRE__DTE_Assert_Group__c/DRE__DTE_Assert_Group__c.object-meta.xml
<CustomObject>
    <label>DTE Assert Group</label>
    <nameField>
        <displayFormat>DTEASRG-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Assert Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>