force-app/main/default/objects/DRE__DTE_Assert_Group__c/fields/DRE__Condition__c.field-meta.xml
<CustomField>
    <fullName>DRE__Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Records exist</fullName>
                <default>true</default>
                <label>Records exist</label>
            </value>
            <value>
                <fullName>Records don't exist</fullName>
            </value>
            <value>
                <fullName>Error occurred</fullName>
            </value>
            <value>
                <fullName>Email was sent</fullName>
            </value>
            <value>
                <fullName>Email was not sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>