force-app/main/default/objects/DRE__DTE_Assert_Group__c/fields/DRE__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>DRE__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>