force-app/main/default/objects/DRE__DTE_Assert_Group__c/fields/DRE__Object_Relationship__c.field-meta.xml
<CustomField>
    <fullName>DRE__Object_Relationship__c</fullName>
    <label>Object Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Record</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>